language/move-lang/tests/move_check/borrows/borrow_local_full_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_local_full_invalid.move:14:9
   │
12 │         let x = &mut v;
   │                 ------ It is still being mutably borrowed by this reference
13 │         let y = &mut v;
14 │         *y;
   │         ^^ Invalid dereference.

error[E07005]: invalid transfer of references
   ┌─ tests/move_check/borrows/borrow_local_full_invalid.move:18:17
   │
17 │         let x = &mut v;
   │                 ------ It is still being mutably borrowed by this reference
18 │         let y = id_mut(&mut v);
   │                 ^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/borrow_local_full_invalid.move:24:9
   │
22 │         let x = &v;
   │                 -- It is still being borrowed by this reference
23 │         let y = &mut v;
24 │         *y = 0;
   │         ^^^^^^ Invalid mutation of reference.

error[E07001]: referential transparency violated
   ┌─ tests/move_check/borrows/borrow_local_full_invalid.move:33:17
   │
32 │         let x = &mut v;
   │                 ------ It is still being mutably borrowed by this reference
33 │         let y = &v;
   │                 ^^ Invalid borrow of local 'v'

